# argos-eye

./: .gitignore  README.md  pyproject.toml
src/argos_eye/: __init__.py  cli.py
src/argos_eye/skill_files/: SKILL.md
src/argos_eye/skill_files/scripts/: crop.py  evidence.py  remap.py
