[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argos-eye"
version = "0.1.0"
description = "Pixel-precise visual grounding for Claude Code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tom Kim" }]
keywords = [
    "claude-code",
    "visual-grounding",
    "gui-grounding",
    "vlm",
    "computer-use",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
argos-eye = "argos_eye.cli:main"

[project.urls]
Homepage = "https://github.com/tom-kim/argos-eye"
Repository = "https://github.com/tom-kim/argos-eye"
Issues = "https://github.com/tom-kim/argos-eye/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/argos_eye"]

[tool.hatch.build.targets.wheel.force-include]
"src/argos_eye/skill_files" = "argos_eye/skill_files"

[tool.ruff]
line-length = 100
target-version = "py310"
